print popup for all tables

--- a/views/pages/warehouse/awb/list.ejs
+++ b/views/pages/warehouse/awb/list.ejs
@@ -64,7 +64,7 @@
                       <!-- temporary commenting the code -->  
                       <!-- <a class="btn btn-link btn-danger btn-rm-awb p-1" data-toggle="modal" data-id="<%=awb._id%>"
                         data-target="#confirm-delete-awb"> <i class="fa fa-trash"></i> </a> -->
-                      <a class="btn btn-link btn-primary btn-print-awb p-1" data-toggle="modal" data-id="<%=awb._id%>"
+                      <a class="btn btn-link btn-primary btn-print-awb p-1"  data-id="<%=awb._id%>"
                         data-target="#print-popup"> <i class="fa fa-print"></i> </a>
                     </td>
                   </tr>
@@ -111,7 +111,7 @@
                         data-original-title="Edit"> <i class="fa fa-pen"></i> </a>
                       <!-- <a class="btn btn-link btn-danger btn-rm-awb p-1" data-toggle="modal" data-id="<%=awb._id%>"
                         data-target="#confirm-delete-awb"> <i class="fa fa-trash"></i> </a> -->
-                      <a class="btn btn-link btn-primary btn-print-awb p-1" data-toggle="modal" data-id="<%=awb._id%>"
+                      <a class="btn btn-link btn-primary btn-print-awb p-1"  data-id="<%=awb._id%>"
                         data-target="#print-popup"> <i class="fa fa-print"></i> </a>
                     </td>
                   </tr>
@@ -167,7 +167,7 @@
                       <!-- temporary commenting the code -->  
                       <!-- <a class="btn btn-link btn-danger btn-rm-awb p-1" data-toggle="modal" data-id="<%=awb._id%>"
                         data-target="#confirm-delete-awb"> <i class="fa fa-trash"></i> </a> -->
-                      <a class="btn btn-link btn-primary btn-print-awb p-1" data-toggle="modal" data-id="<%=awb._id%>"
+                      <a class="btn btn-link btn-primary btn-print-awb p-1" data-id="<%=awb._id%>"
                         data-target="#print-popup"> <i class="fa fa-print"></i> </a>
                     </td>
                   </tr>
@@ -223,7 +223,7 @@
                       <!-- temporary commenting the code -->  
                       <!-- <a class="btn btn-link btn-danger btn-rm-awb p-1" data-toggle="modal" data-id="<%=awb._id%>"
                         data-target="#confirm-delete-awb"> <i class="fa fa-trash"></i> </a> -->
-                      <a class="btn btn-link btn-primary btn-print-awb p-1" data-toggle="modal" data-id="<%=awb._id%>"
+                      <a class="btn btn-link btn-primary btn-print-awb p-1" data-id="<%=awb._id%>"
                         data-target="#print-popup"> <i class="fa fa-print"></i> </a>
                     </td>
                   </tr>
