--- a/views/pages/warehouse/awb/preview.ejs
+++ b/views/pages/warehouse/awb/preview.ejs
@@ -7,7 +7,7 @@
         <a class="btn btn-danger btn-round text-white" href="/warehouse/download-pdf/pkg/<%=awb._id%>"> Download Pkgs</a>
         <a class="btn btn-danger btn-round text-white ml-2 btn-print-pkgs" data-id="<%=awb._id%>"> Print Pkgs </a>
         <a class="btn btn-danger btn-round text-white" href="/warehouse/download-pdf/awb/<%=awb._id%>"> Download PDF</a>
-        <a class="btn btn-danger btn-round text-white ml-2 btn-print-awb" data-toggle="modal" data-id="<%=awb._id%>"
+        <a class="btn btn-danger btn-round text-white ml-2 btn-print-awb" data-id="<%=awb._id%>"
           data-target="#print-popup"> Print AWB </a>
       </div>
     </div>
@@ -139,7 +139,6 @@
                               <td class="text-center">
                                 <a
                                     class="btn btn-link btn-primary btn-print-pkg"
-                                    data-toggle="modal"
                                     data-id="<%=package._id%>"
                                     data-original-title="Print Label"
                                     data-target="#print-popup"
