--- a/views/pages/warehouse/awbprice/list-all.ejs
+++ b/views/pages/warehouse/awbprice/list-all.ejs
@@ -79,7 +79,7 @@
                       <td><button class="btn btn-link download-price-label <%= ifNotPriceLabel %>" data-id="<%=awb._id%>" ><i
                         class="fa fa-download ifNotPriceLabel"></i></button></td>
                 <td>
-                  <a class="btn btn-link btn-primary btn-print-pkg <%= ifNotPriceLabel %>" data-toggle="modal"
+                  <a class="btn btn-link btn-primary btn-print-pkg <%= ifNotPriceLabel %>"
                     data-id="<%=awb._id%>" data-original-title="Print Label" data-target="#print-pricelabel-popup"><i
                       class="fa fa-print ifNotPriceLabel"></i>
                   </a>
