--- a/views/pages/warehouse/package/list.ejs
+++ b/views/pages/warehouse/package/list.ejs
@@ -98,7 +98,7 @@
                                                                     <!-- <td><a href="../../pkg-label/download/<%=pkg._id%>"><i class="fa fa-download"></i></a></td> -->
                                                                     <td class="text-center">
                                                                         <a href="../../pkg-label/download/<%=pkg._id%>"><i class="fa fa-download"></i></a>
-                                                                        <a class="btn btn-link btn-primary btn-print-pkg" data-toggle="modal" data-id="<%=pkg._id%>" data-original-title="Print Label" data-target="#print-popup"><i class="fa fa-print"></i> </a>
+                                                                        <a class="btn btn-link btn-primary btn-print-pkg" data-id="<%=pkg._id%>" data-original-title="Print Label" data-target="#print-popup"><i class="fa fa-print"></i> </a>
                                                                     </td>
                                     </tr>
                                     <%})%>
