--- a/views/pages/warehouse/package/no-docs.ejs
+++ b/views/pages/warehouse/package/no-docs.ejs
@@ -60,7 +60,7 @@
                 <!-- temporary commenting the code -->
                 <!-- <a class="btn btn-link btn-danger btn-rm-awb p-1" data-toggle="modal" data-id="<%=pkg._id%>"
                   data-target="#confirm-delete-awb"> <i class="fa fa-trash"></i> </a> -->
-                <a class="btn btn-link btn-primary btn-print-pkg" data-toggle="modal" data-id="<%=pkg._id%>"
+                <a class="btn btn-link btn-primary btn-print-pkg" data-id="<%=pkg._id%>"
                   data-target="#print-popup"><i class="fa fa-print"></i> </a>
               </td>
             </tr>
