--- a/views/pages/warehouse/awb/edit.ejs
+++ b/views/pages/warehouse/awb/edit.ejs
@@ -226,7 +226,8 @@
           <div class="separator-solid"></div>
           <div class="d-flex mr-1">
             <h3 class="card-title text-muted">Packages - <span class='package-info'>0 Pieces / 0.00 lbs</span></h3>
-            <a class="btn btn-info btn-round ml-auto mr-2"  href="/warehouse/download-pdf/pkg/<%=awb._id%>" >Print Pkgs</a>
+            <a class="btn btn-info btn-round ml-auto mr-2 btn-print-pkgs" data-id="<%=awb._id%>"> Print Pkgs </a>
+            <!-- <a class="btn btn-info btn-round ml-auto mr-2"  href="/warehouse/download-pdf/pkg/<%=awb._id%>" >Print Pkgs</a> -->
             <a href="#add-package-popup" class="btn btn-info btn-round btn-add-package mr-5" id="link-add-package-popup">Add
               Package</a>
           </div>
