--- a/views/pages/admin/customers/edit.ejs
+++ b/views/pages/admin/customers/edit.ejs
@@ -9,6 +9,17 @@
         <div class="card-body">
           <input type="hidden" id="id" name="id" value="<%=customer.id%>">
           <div class="form-group form-show-validation row">
+            <label for="company" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Company</label>
+            <div class="col-lg-4 col-md-9 col-sm-8">
+                <select id="company" name="company" class="form-control">
+                    <% companies.forEach(company => { %>
+                      <option value="<%= company._id%>" <% if(company._id.toString()==customer.company._id.toString()) { %> selected <% } %>> <%= company.name %>
+                      </option>
+                      <% }) %>
+                </select>
+            </div>
+          </div>
+          <div class="form-group form-show-validation row">
             <label for="pmb" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">PMB</label>
             <div class="col-lg-4 col-md-9 col-sm-8">
               <input type="number" class="form-control" id="pmb" name="pmb" placeholder="PMB" required
