--- a/views/pages/warehouse/manifest/preview.ejs
+++ b/views/pages/warehouse/manifest/preview.ejs
@@ -19,20 +19,20 @@
             <div class="card-header">
                 <div class="pull-right">
                     <div class="btn-group custom-btn-group float-right" role="group">
-                        <a href="/api/printer/download-pdf/manifest/<%=manifest.id%>/air-cargo-manifest"
-                            class="btn btn-primary btn-sm" target="_blank">
+                        <a onclick="downloadFile('/api/printer/download-pdf/manifest/<%=manifest.id%>/air-cargo-manifest')"
+                            class="btn btn-primary btn-sm" >
                             Air Cargo Manifest &nbsp;&nbsp;<i class="fa fa-download"></i>
                         </a>
-                        <a href="/api/printer/download-pdf/manifest/<%=manifest.id%>/flight-manifest"
+                        <a onclick="downloadFile('/api/printer/download-pdf/manifest/<%=manifest.id%>/flight-manifest')" 
                             class="btn btn-primary btn-sm">
                             Flight Manifest &nbsp;&nbsp;<i class="fa fa-download"></i>
                         </a>
-                        <a href="/api/printer/download-pdf/manifest/<%=manifest.id%>/flight-load-sheet"
+                        <a onclick="downloadFile('/api/printer/download-pdf/manifest/<%=manifest.id%>/flight-load-sheet')"
                             class="btn btn-primary btn-sm">
                             Flight Load Sheet &nbsp;&nbsp;<i class="fa fa-download"></i>
                         </a>
                         </a>
-                        <a href="/api/printer/download-pdf/manifest/<%=manifest.id%>/us-customs"
+                        <a onclick="downloadFile('/api/printer/download-pdf/manifest/<%=manifest.id%>/us-customs')"
                             class="btn btn-primary btn-sm">
                             US Customs &nbsp;&nbsp;<i class="fa fa-download"></i>
                         </a>
