--- a/views/pages/warehouse/shipper/create.ejs
+++ b/views/pages/warehouse/shipper/create.ejs
@@ -32,7 +32,7 @@
           </div>
           <div class='form-group row'>
             <label for="shipper-tax" class="col-md-3 mt-sm-2 text-right">Tax ID</label>
-            <div class="col-md-8">
+            <div class="col-lg-4 col-md-9 col-sm-8">
               <input type='text' class='form-control' placeholder="xxx-xxx-xxxx" id='shipper-tax' name="tax" />
             </div>
           </div>
@@ -44,7 +44,7 @@
           </div>
           <div class='form-group row'>
             <label for="shipper-tax" class="col-md-3 mt-sm-2 text-right">Tax ID</label>
-            <div class="col-md-8">
+            <div class="col-lg-4 col-md-9 col-sm-8">
               <input type='text' class='form-control' placeholder="xxx-xxx-xxxx" id='shipper-tax' name="tax" />
             </div>
           </div>
