--- a/views/pages/warehouse/shipper/edit.ejs
+++ b/views/pages/warehouse/shipper/edit.ejs
@@ -43,7 +43,7 @@
           </div>
           <div class='form-group row'>
             <label for="shipper-tax" class="col-md-3 mt-sm-2 text-right">Tax ID</label>
-            <div class="col-md-8">
+            <div class="col-lg-4 col-md-9 col-sm-8">
               <input type='text' class='form-control' placeholder="xxx-xxx-xxxx" id='shipper-tax' name="tax" value="<%=shipper.tax%>" />
             </div>
           </div>
