--- a/views/pages/warehouse/awb/create.ejs
+++ b/views/pages/warehouse/awb/create.ejs
@@ -31,7 +31,8 @@
                   </select>
                 </div>
                 <div class="input-group-append">
-                  <a href="#" data-toggle="modal" data-target="#add-customer-popup">
+                  <a href="#" data-toggle="modal" data-target="#add-customer-popup" data-keyboard="false"
+                  data-backdrop="static">
                     <span class="input-group-text">+</span></a>
                 </div>
               </div>
@@ -46,7 +47,7 @@
                   </select>
                 </div>
                 <div class="input-group-append">
-                  <a href="#" data-toggle="modal" data-target="#add-shipper-popup">
+                  <a href="#" data-toggle="modal" data-target="#add-shipper-popup" >
                     <span class="input-group-text">+</span></a>
                 </div>
               </div>
