--- a/views/pages/warehouse/manifest/preview.ejs
+++ b/views/pages/warehouse/manifest/preview.ejs
@@ -20,11 +20,11 @@
                 <div class="pull-right">
                     <div class="btn-group custom-btn-group float-right" role="group">
                         <a  href="/api/printer/download-pdf/manifest/<%=manifest.id%>/air-cargo-manifest"
-                            class="btn btn-primary btn-sm download-spinner" >
+                            class="btn btn-primary btn-sm"  onclick="downloadFile('/api/printer/download-pdf/manifest/<%=manifest.id%>/flight-manifest', 'air-cargo-manifest')">
                             Air Cargo Manifest &nbsp;&nbsp;<i class="fa fa-download"></i>
                         </a>
                         <a href="/api/printer/download-pdf/manifest/<%=manifest.id%>/flight-manifest"
-                            class="btn btn-primary btn-sm download-spinner" >
+                            class="btn btn-primary btn-sm" onclick="downloadFile('/api/printer/download-pdf/manifest/<%=manifest.id%>/flight-manifest', 'flight-manifest')">
                             Flight Manifest &nbsp;&nbsp;<i class="fa fa-download"></i>
                         </a>
                         <a href="/api/printer/download-pdf/manifest/<%=manifest.id%>/flight-load-sheet"
