--- a/views/pages/admin/customerchild/create.ejs
+++ b/views/pages/admin/customerchild/create.ejs
@@ -45,6 +45,12 @@
                 </div>
               </div>
               <div class="form-group form-show-validation row">
+                <label for="telephone" class="col-lg-4 col-md-4 col-sm-4 mt-sm-2 text-right">Telephone</label>
+                <div class="col-lg-8 col-md-8 col-sm-8">
+                  <input type="tel" class="form-control" id="telephone" name="telephone" placeholder="(242)-123-4567">
+                </div>
+              </div>
+              <div class="form-group form-show-validation row">
                 <label for="password" class="col-lg-4 col-md-4 col-sm-4 mt-sm-2 text-right">Password </label>
                 <div class="col-lg-8 col-md-8 col-sm-8">
                   <input type="password" class="form-control" id="password" name="password" placeholder="New Password">
