--- a/views/pages/admin/customerchild/edit.ejs
+++ b/views/pages/admin/customerchild/edit.ejs
@@ -37,6 +37,12 @@
             </div>
           </div>
           <div class="form-group form-show-validation row">
+            <label for="telephone" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Telephone</label>
+            <div class="col-lg-4 col-md-9 col-sm-8">
+              <input type="tel" class="form-control" id="telephone" name="telephone" placeholder="(242)-123-4567" value="<%=customer.telephone %>">
+            </div>
+          </div>
+          <div class="form-group form-show-validation row">
             <label for="password" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Password</label>
             <div class="col-lg-4 col-md-9 col-sm-8">
               <input type="password" class="form-control" id="password" name="password" placeholder="password">
