--- a/views/pages/warehouse/manifest/preview.ejs
+++ b/views/pages/warehouse/manifest/preview.ejs
@@ -20,7 +20,7 @@
                 <div class="pull-right">
                     <div class="btn-group custom-btn-group float-right" role="group">
                         <a  href="/api/printer/download-pdf/manifest/<%=manifest.id%>/air-cargo-manifest?type=duplicate"
-                            class="btn btn-primary btn-sm"  onclick="downloadFile('/api/printer/download-pdf/manifest/<%=manifest.id%>/flight-manifest', 'air-cargo-manifest')">
+                            class="btn btn-primary btn-sm download-spinner"  onclick="downloadFile('/api/printer/download-pdf/manifest/<%=manifest.id%>/flight-manifest', 'air-cargo-manifest')">
                             Merge Air Cargo Manifest &nbsp;&nbsp;<i class="fa fa-download"></i>
                         </a>
                         <a  href="/api/printer/download-pdf/manifest/<%=manifest.id%>/air-cargo-manifest"
@@ -28,7 +28,7 @@
                             Air Cargo Manifest &nbsp;&nbsp;<i class="fa fa-download"></i>
                         </a>
                         <a href="/api/printer/download-pdf/manifest/<%=manifest.id%>/flight-manifest?type=duplicate"
-                            class="btn btn-primary btn-sm" onclick="downloadFile('/api/printer/download-pdf/manifest/<%=manifest.id%>/flight-manifest', 'flight-manifest')">
+                            class="btn btn-primary btn-sm download-spinner" onclick="downloadFile('/api/printer/download-pdf/manifest/<%=manifest.id%>/flight-manifest', 'flight-manifest')">
                             Merge Flight Manifest &nbsp;&nbsp;<i class="fa fa-download"></i>
                         </a>
                         <a href="/api/printer/download-pdf/manifest/<%=manifest.id%>/flight-manifest"
@@ -85,12 +85,13 @@
                             </div>
                         </div>
                         <% } %>
+                        
                         <div class="form-group form-show-validation row">
                             <label for="tailNumber" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">AirCraft
                                 Type</label>
                             <div class="col-lg-8 col-md-8 col-sm-8">
                                 <input type='text' class='form-control' id='aircraft_type' placeholder="AirCraft Type"
-                                    value="<%= plane.aircraft_type %>" readonly />
+                                    value="<%= plane.aircraftType %>" readonly />
                             </div>
                         </div>
                         <div class="form-group form-show-validation row">
@@ -110,7 +111,7 @@
                 </div>
                 <div class="separator-solid"></div>
                 <div class="d-flex">
-                    <h3 class="card-title text-muted package-info">Data Entry ( Weight : 0 lbs / 0lbs )</h3>
+                    <h3 class="card-title text-muted package-info">Data Entry ( Weight : <span id="lbs-data-entry">10</span> lbs / <span id="vlbs-data-entry"></span> vlbs )</h3>
                 </div>
                 <div class='row mt-3 daterangepickerbody'>
                     <div class='col-md-12 table-responsive'>
@@ -173,10 +174,10 @@
                                 <tr>
                                     <td></td>
                                     <td><strong>Total Weight</strong></td>
-                                    <td><strong><%= totalWeight.toFixed(2)%></strong> lbs</td>
+                                    <td><strong id="lsweight"><%= totalWeight.toFixed(2)%></strong> lbs</td>
                                     <td></td>
                                     <td><strong>Total Volumetric Weight</strong></td>
-                                    <td><strong><%= volumetricWeight.toFixed(2)%></strong> vlbs</td>
+                                    <td><strong id="vlsweight"><%= volumetricWeight.toFixed(2)%></strong> vlbs</td>
                                 </tr>
                             </tbody>
                         </table>
