--- a/views/pages/warehouse/awb/list.ejs
+++ b/views/pages/warehouse/awb/list.ejs
@@ -5,14 +5,14 @@
       <div class="card-header">
         <div class="row row-nav-line">
           <ul class="nav nav-tabs nav-line nav-color-primary" id="awb-list-tab" role="tablist">
-            <li class="nav-item"> <a class="nav-link active show" data-toggle="tab" href="#awb-list" role="tab"
-                aria-selected="true">AirWay Bills</a> </li>
-            <li class="nav-item"> <a class="nav-link" data-toggle="tab" href="#awb-no-docs" role="tab"
-                aria-selected="false">No Docs</a> </li>
-            <li class="nav-item"> <a class="nav-link" data-toggle="tab" href="#awb-no-packages" role="tab"
-                aria-selected="false">Pending Awb</a> </li>
-            <li class="nav-item"> <a class="nav-link" data-toggle="tab" href="#awb-pickups" role="tab"
-                aria-selected="false">Awb Pickups</a> </li>
+            <li class="nav-item"> <a class="nav-link <%if(type =="airwaybill" || !type){%>active show<%}%>" data-toggle="tab" href="#awb-list" role="tab"
+                aria-selected="true" onclick="pagereload('airwaybill')">AirWay Bills</a> </li>
+            <li class="nav-item"> <a class="nav-link <%if(type =="nodocs"){%>active show<%}%>" data-toggle="tab" href="#awb-no-docs" role="tab"
+                aria-selected="false" onclick="pagereload('nodocs')">No Docs</a> </li>
+            <li class="nav-item"> <a class="nav-link <%if(type =="pendingawb"){%>active show<%}%>" data-toggle="tab" href="#awb-no-packages" role="tab"
+                aria-selected="false" onclick="pagereload('pendingawb')">Pending Awb</a> </li>
+            <li class="nav-item"> <a class="nav-link <%if(type =="awbpackage"){%>active show<%}%>" data-toggle="tab" href="#awb-pickups" role="tab"
+                aria-selected="false" onclick="pagereload('awbpackage')">Awb Pickups</a> </li>
           </ul>
         </div>
       </div>
@@ -40,7 +40,8 @@
                   </tr>
                 </thead>
                 <tbody>
-                  <% awbs.forEach(function(awb){
+                  <% if(type=="airwaybill" || !type){
+                    awbs.forEach(function(awb){
                     if(awb.packages.length > 0){ %>
                   <tr data-record="<%= awb._id %>">
                     <td><%=(awb.customer && awb.customer.pmb)?awb.customer.pmb:'' %></td>
@@ -68,7 +69,7 @@
                         data-target="#print-popup"> <i class="fa fa-print"></i> </a>
                     </td>
                   </tr>
-                  <%}})%>
+                  <%}})}%>
                 </tbody>
               </table>
             </div>
@@ -93,6 +94,7 @@
                 </thead>
                 <tbody>
                   <% 
+                  if(type=="nodocs"){
                   awbs.forEach(function(awb){
                     if(!awb.invoice) {
                   %>
@@ -115,7 +117,7 @@
                         data-target="#print-popup"> <i class="fa fa-print"></i> </a>
                     </td>
                   </tr>
-                  <% }}) %>
+                  <% }}) }%>
                 </tbody>
               </table>
             </div>
@@ -142,7 +144,9 @@
                   </tr>
                 </thead>
                 <tbody>
-                  <% awbs.forEach(function(awb){
+                  <%
+                  if(type=="pendingawb"){
+                   awbs.forEach(function(awb){
                     if(awb.packages.length === 0) {
                       %>
                   <tr data-record="<%= awb._id %>">
@@ -171,7 +175,7 @@
                         data-target="#print-popup"> <i class="fa fa-print"></i> </a>
                     </td>
                   </tr>
-                  <%}})%>
+                  <%}})}%>
                 </tbody>
               </table>
             </div>
@@ -198,7 +202,9 @@
                   </tr>
                 </thead>
                 <tbody>
-                  <% awbs.forEach(function(awb){
+                  <% 
+                  if(type=="awbpackage"){
+                  awbs.forEach(function(awb){
                     if(awb.fll_pickup) {
                       %>
                   <tr data-record="<%= awb._id %>">
@@ -227,7 +233,7 @@
                         data-target="#print-popup"> <i class="fa fa-print"></i> </a>
                     </td>
                   </tr>
-                  <%}})%>
+                  <%}})}%>
                 </tbody>
               </table>
             </div>
@@ -303,5 +309,11 @@
     </div>
   </div>
 </div>
+<script>
+  var type = "<%=type%>";
+  function pagereload(str){
+    window.location ="/warehouse/fll/awb/list?type="+str
+  }
+  </script>
 <% block('scripts').append('<script src="/js/utils.js"></script>')%>
 <% block('scripts').append('<script src="/js/warehouse/awb/list.js"></script>')%>
