--- a/views/pages/warehouse/awb/list.ejs
+++ b/views/pages/warehouse/awb/list.ejs
@@ -1,4 +1,20 @@
 <% layout('./shared/__template')%>
+<%
+var nodocsawb =[];
+var pendingawb = [];
+var awbpackage = [];
+var airwaybill = [];
+if(type=="nodocs"){
+   nodocsawb = awbs;
+}else if(type=="pendingawb"){
+   pendingawb = awbs;
+}else if(type=="awbpackage"){
+   awbpackage = awbs;
+}else{
+   airwaybill = awbs;
+}
+%>
+
 <div class='gutters'>
   <div class='col-xl-12 col-lg-6 col-md-12 col-sm-12'>
     <div class='card card-with-nav'>
@@ -20,7 +36,7 @@
       <div class="card-body daterangepickerbody">
         <div class="tab-content m-4" id="awb-list-tabContent">
           <input type="hidden" name="clear" id="clear" value="<%=clear%>">
-          <div class="tab-pane fade show active" id="awb-list" role="tabpanel" aria-labelledby="awb-list-tab">
+          <div class="tab-pane fade <%if(type =="airwaybill" || !type){%>active show<%}%>" id="awb-list" role="tabpanel" aria-labelledby="awb-list-tab">
             <div class="table-responsive">
               <table id='awb-table' class='display table table-striped table-hover dateRangeFilterTable dataTable'>
                 <thead>
@@ -40,8 +56,8 @@
                   </tr>
                 </thead>
                 <tbody>
-                  <% if(type=="airwaybill" || !type){
-                    awbs.forEach(function(awb){
+                  <% 
+                  airwaybill.forEach(function(awb){
                     if(awb.packages.length > 0){ %>
                   <tr data-record="<%= awb._id %>">
                     <td><%=(awb.customer && awb.customer.pmb)?awb.customer.pmb:'' %></td>
@@ -69,13 +85,13 @@
                         data-target="#print-popup"> <i class="fa fa-print"></i> </a>
                     </td>
                   </tr>
-                  <%}})}%>
+                  <%}})%>
                 </tbody>
               </table>
             </div>
           </div>
           <!-- Nodocs -->
-          <div class="tab-pane fade" id="awb-no-docs" role="tabpanel" aria-labelledby="awb-no-docs-tab">
+          <div class="tab-pane fade <%if(type =="nodocs"){%>active show<%}%>" id="awb-no-docs" role="tabpanel" aria-labelledby="awb-no-docs-tab">
             <div class="table-responsive">
               <table id='no-docs-table' class='display table table-striped table-hover dateRangeFilterTable dataTable'>
                 <thead>
@@ -94,8 +110,8 @@
                 </thead>
                 <tbody>
                   <% 
-                  if(type=="nodocs"){
-                  awbs.forEach(function(awb){
+                  
+                    nodocsawb.forEach(function(awb){
                     if(!awb.invoice) {
                   %>
                   <tr data-record="<%= awb._id %>">
@@ -117,14 +133,14 @@
                         data-target="#print-popup"> <i class="fa fa-print"></i> </a>
                     </td>
                   </tr>
-                  <% }}) }%>
+                  <% }}) %>
                 </tbody>
               </table>
             </div>
           </div>
           <!-- End Nodocs -->
           <!-- Pending Awbs -->
-          <div class="tab-pane fade" id="awb-no-packages" role="tabpanel" aria-labelledby="awb-no-packages-tab">
+          <div class="tab-pane fade <%if(type =="pendingawb"){%>active show<%}%>" id="awb-no-packages" role="tabpanel" aria-labelledby="awb-no-packages-tab">
             <div class="table-responsive">
                 <table id='pending-awb-table' class='display table table-striped table-hover dateRangeFilterTable dataTable'>
                 <thead>
@@ -145,8 +161,8 @@
                 </thead>
                 <tbody>
                   <%
-                  if(type=="pendingawb"){
-                   awbs.forEach(function(awb){
+                 
+                    pendingawb.forEach(function(awb){
                     if(awb.packages.length === 0) {
                       %>
                   <tr data-record="<%= awb._id %>">
@@ -175,14 +191,14 @@
                         data-target="#print-popup"> <i class="fa fa-print"></i> </a>
                     </td>
                   </tr>
-                  <%}})}%>
+                  <%}})%>
                 </tbody>
               </table>
             </div>
           </div>
           <!-- End Pending Awbs -->
           <!-- Pickups Awbs -->
-          <div class="tab-pane fade" id="awb-pickups" role="tabpanel" aria-labelledby="awb-pickups-tab">
+          <div class="tab-pane fade <%if(type =="awbpackage"){%>active show<%}%>" id="awb-pickups" role="tabpanel" aria-labelledby="awb-pickups-tab">
             <div class="table-responsive">
                 <table id='pickup-awb-table' class='display table table-striped table-hover dateRangeFilterTable dataTable'>
                 <thead>
@@ -203,8 +219,8 @@
                 </thead>
                 <tbody>
                   <% 
-                  if(type=="awbpackage"){
-                  awbs.forEach(function(awb){
+                 
+                    awbpackage.forEach(function(awb){
                     if(awb.fll_pickup) {
                       %>
                   <tr data-record="<%= awb._id %>">
@@ -233,7 +249,7 @@
                         data-target="#print-popup"> <i class="fa fa-print"></i> </a>
                     </td>
                   </tr>
-                  <%}})}%>
+                  <%}})%>
                 </tbody>
               </table>
             </div>
@@ -310,10 +326,7 @@
   </div>
 </div>
 <script>
-  var type = "<%=type%>";
-  function pagereload(str){
-    window.location ="/warehouse/fll/awb/list?type="+str
-  }
+  var type = "<%=type%>";  
   </script>
 <% block('scripts').append('<script src="/js/utils.js"></script>')%>
 <% block('scripts').append('<script src="/js/warehouse/awb/list.js"></script>')%>
