--- a/views/pages/warehouse/awb/list.ejs
+++ b/views/pages/warehouse/awb/list.ejs
@@ -38,7 +38,7 @@ if(type=="nodocs"){
           <input type="hidden" name="clear" id="clear" value="<%=clear%>">
           <div class="tab-pane fade <%if(type =="airwaybill" || !type){%>active show<%}%>" id="awb-list" role="tabpanel" aria-labelledby="awb-list-tab">
             <div class="table-responsive">
-              <table id='awb-table' class='display table table-striped table-hover dateRangeFilterTable dataTable'>
+              <table id='awb-table' class='display table table-striped table-hover  dataTable'>
                 <thead>
                   <tr>
                     <th>PMB</th>
@@ -58,7 +58,7 @@ if(type=="nodocs"){
                 <tbody>
                   <% 
                   airwaybill.forEach(function(awb){
-                    if(awb.packages.length > 0){ %>
+                  %>
                   <tr data-record="<%= awb._id %>">
                     <td><%=(awb.customer && awb.customer.pmb)?awb.customer.pmb:'' %></td>
                     <td><%=helpers.formatDate(awb.createdAt)%></td>
@@ -85,7 +85,7 @@ if(type=="nodocs"){
                         data-target="#print-popup"> <i class="fa fa-print"></i> </a>
                     </td>
                   </tr>
-                  <%}})%>
+                  <%})%>
                 </tbody>
               </table>
             </div>
@@ -93,7 +93,7 @@ if(type=="nodocs"){
           <!-- Nodocs -->
           <div class="tab-pane fade <%if(type =="nodocs"){%>active show<%}%>" id="awb-no-docs" role="tabpanel" aria-labelledby="awb-no-docs-tab">
             <div class="table-responsive">
-              <table id='no-docs-table' class='display table table-striped table-hover dateRangeFilterTable dataTable'>
+              <table id='no-docs-table' class='display table table-striped table-hover  dataTable'>
                 <thead>
                   <tr>
                     <th>PMB</th>
@@ -112,7 +112,6 @@ if(type=="nodocs"){
                   <% 
                   
                     nodocsawb.forEach(function(awb){
-                    if(!awb.invoice) {
                   %>
                   <tr data-record="<%= awb._id %>">
                     <td><%= awb.customer && awb.customer.pmb %></td>
@@ -133,7 +132,7 @@ if(type=="nodocs"){
                         data-target="#print-popup"> <i class="fa fa-print"></i> </a>
                     </td>
                   </tr>
-                  <% }}) %>
+                  <% }) %>
                 </tbody>
               </table>
             </div>
@@ -142,7 +141,7 @@ if(type=="nodocs"){
           <!-- Pending Awbs -->
           <div class="tab-pane fade <%if(type =="pendingawb"){%>active show<%}%>" id="awb-no-packages" role="tabpanel" aria-labelledby="awb-no-packages-tab">
             <div class="table-responsive">
-                <table id='pending-awb-table' class='display table table-striped table-hover dateRangeFilterTable dataTable'>
+                <table id='pending-awb-table' class='display table table-striped table-hover  dataTable'>
                 <thead>
                   <tr>
                     <th>PMB</th>
@@ -163,7 +162,6 @@ if(type=="nodocs"){
                   <%
                  
                     pendingawb.forEach(function(awb){
-                    if(awb.packages.length === 0) {
                       %>
                   <tr data-record="<%= awb._id %>">
                     <td><%=awb.customer.pmb %></td>
@@ -191,7 +189,7 @@ if(type=="nodocs"){
                         data-target="#print-popup"> <i class="fa fa-print"></i> </a>
                     </td>
                   </tr>
-                  <%}})%>
+                  <%})%>
                 </tbody>
               </table>
             </div>
@@ -200,7 +198,7 @@ if(type=="nodocs"){
           <!-- Pickups Awbs -->
           <div class="tab-pane fade <%if(type =="awbpackage"){%>active show<%}%>" id="awb-pickups" role="tabpanel" aria-labelledby="awb-pickups-tab">
             <div class="table-responsive">
-                <table id='pickup-awb-table' class='display table table-striped table-hover dateRangeFilterTable dataTable'>
+                <table id='pickup-awb-table' class='display table table-striped table-hover  dataTable'>
                 <thead>
                   <tr>
                     <th>PMB</th>
@@ -221,7 +219,6 @@ if(type=="nodocs"){
                   <% 
                  
                     awbpackage.forEach(function(awb){
-                    if(awb.fll_pickup) {
                       %>
                   <tr data-record="<%= awb._id %>">
                     <td><%=awb.customer.pmb %></td>
@@ -249,7 +246,7 @@ if(type=="nodocs"){
                         data-target="#print-popup"> <i class="fa fa-print"></i> </a>
                     </td>
                   </tr>
-                  <%}})%>
+                  <%})%>
                 </tbody>
               </table>
             </div>
