cube name in all package

--- a/views/pages/warehouse/awb/preview.ejs
+++ b/views/pages/warehouse/awb/preview.ejs
@@ -4,6 +4,7 @@
   <div class="col-12 col-lg-10 col-xl-9">
     <div class="row align-items-center">
       <div class="ml-auto mr-3 mb-3 mt--4">
+        <a class="btn btn-danger btn-round text-white" href="/warehouse/fll/awb/create"> Create</a>
         <a class="btn btn-danger btn-round text-white" href="/warehouse/download-pdf/pkg/<%=awb._id%>"> Download Pkgs</a>
         <a class="btn btn-danger btn-round text-white ml-2 btn-print-pkgs" data-id="<%=awb._id%>"> Print Pkgs </a>
         <a class="btn btn-danger btn-round text-white" href="/warehouse/download-pdf/awb/<%=awb._id%>"> Download PDF</a>
