--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -141,6 +141,11 @@
 								</a>
 							</li>
 							<%}%>
+							<li <% if (page.includes('/fll/package/overviewfll/list')) { %> class="active" <% } %>>
+								<a href="/warehouse/fll/package/overviewfll/list">
+									<span class="sub-item">Overview FLL</span>
+								</a>
+							</li>
 						</ul>
 					</div>
 				</li>
