purchase order pdf

--- a/views/pages/warehouse/cube/detail.ejs
+++ b/views/pages/warehouse/cube/detail.ejs
@@ -9,6 +9,11 @@
         </div>
         <h4 class="card-title"><%=title%></h4>
       </div>
+      <!-- <div class="row align-items-center">
+        <div class="ml-auto mr-3 mb-3 mt--11" style="margin-top: -55px;">
+          <a href="/api/printer/pdf/generate/cubedetail/<%=cube._id%>" class="btn btn-danger btn-round text-white ml-2 btn-print-awb" data-id="<%=cube._id%>"> Print AWB </a>
+        </div>
+      </div> -->
       <div id="myLoader"><img src="/img/preloader.gif"></div>
       <div class="card-body">
         
