--- a/views/pages/warehouse/awb/create.ejs
+++ b/views/pages/warehouse/awb/create.ejs
@@ -274,7 +274,7 @@
         <label for="weight">Weight</label>
         <input type='number' class='form-control' id='weight' name='weight' step="0.01" required />
       </div>
-      <div class='form-group'>
+      <div class='form-group' id="calculationSelect">
         <label for="packageCalculation">Package calculation</label>
         <select class='form-control packageCalculation' id='packageCalculation' name="packageCalculation" required>
           <option></option>          
@@ -289,7 +289,7 @@
         </div>
       </div>
       
-      <div class='form-group'>
+      <div class='form-group' id="packageSelect">
         <label for="packageType">Package Type</label>
         <select class='form-control packageType' id='packageType' name="packageType" required>
           <option></option>
@@ -308,7 +308,7 @@
       <div class='form-group'>
         <label for="originBarcode">Origin barcode</label>
         <div class="row">
-          <div class="col-lg-9 col-md-9 col-sm-9">
+          <div class="col-lg-9 col-md-9 col-sm-9" id="trackingSelect">
             <%const pbarcode = processBarcode?processBarcode.barcode:'';%>            
             <select id="originBarcode" name="originBarcode" class='form-control'>
               <option></option>
