--- a/views/pages/warehouse/awb/edit.ejs
+++ b/views/pages/warehouse/awb/edit.ejs
@@ -192,9 +192,9 @@
           <div class="separator-solid"></div>
           <div class="d-flex mr-1">
             <h3 class="card-title text-muted">AWB Purchase Order List</h3>
-            <a href="/api/printer/pdf/generate/awb-purchase-order/<%=awb._id%>" class="btn btn-info btn-round ml-auto mr-2 " style="margin-left: 450px !important;">Print P.O</a>
+            <a href="/api/printer/pdf/generate/awb-purchase-order/<%=awb._id%>" class="btn btn-info btn-round ml-auto mr-2 " >Print P.O</a>
             <a href="#" data-toggle="modal" data-target="#add-purchase-order-item-modal"
-              class="btn btn-info btn-round ml-auto mr-5">Add P.O</a>
+              class="btn btn-info btn-round mr-5">Add P.O</a>
           </div>
           <div class="row">
             <div class="table-responsive mx-5 mt-3">
@@ -308,7 +308,7 @@
         <label for="weight">Weight</label>
         <input type='number' class='form-control' id='weight' name='weight' step="0.01" required />
       </div>
-      <div class='form-group'>
+      <div class='form-group' id="calculationSelect">
         <label for="packageCalculation">Package calculation</label>
         <select class='form-control packageCalculation' id='packageCalculation' name="packageCalculation" required>
           <option></option>          
@@ -324,7 +324,7 @@
         </div>
       </div>
       
-      <div class='form-group'>
+      <div class='form-group' id="packageSelect">
         <label for="packageType">Package Type</label>
         <select class='form-control packageType' id='packageType' name="packageType" required>
           <option></option>
@@ -343,7 +343,7 @@
       <div class='form-group'>
         <label for="originBarcode">Origin barcode</label>
         <div class="row">
-          <div class="col-lg-9 col-md-9 col-sm-9">
+          <div class="col-lg-9 col-md-9 col-sm-9" id="trackingSelect">
             <%const pbarcode = processBarcode?processBarcode.barcode:'';%> 
             <select id="originBarcode" name="originBarcode" class='form-control'>
               <option ></option>
