packages query string

--- a/views/pages/warehouse/package/list-all.ejs
+++ b/views/pages/warehouse/package/list-all.ejs
@@ -63,6 +63,8 @@
       <div id="myLoader"><img src="/img/preloader.gif"></div>
       <div class="card-body daterangepickerbody">
         <input type="hidden" name="clear" id="clear" value="<%=clear%>">
+        <input type="button" id="next" class="btn-primary btn-round " value="Next Page" onclick="nextPageData()">
+        <input type="button" id="creardata" class="btn-primary btn-round" value="clear" onclick="clearPageData()">
         <div class="table-responsive p-4">
         <table id = "package-table" class="display  table table-striped table-hover dataTable package-table">
           <thead>
@@ -343,6 +345,8 @@
 </div>
 <script> 
   var pageUrl = "<%=page ? page :''%>";
+  var daterange = "<%=query.daterange ? query.daterange :''%>";
+  var start = "<%=query.start ? parseInt(query.start) :0%>";
 </script>
 <% block('scripts').append('<script src="/js/utils.js"></script>')%>
 <% block('scripts').append('<script src="/js/warehouse/package/list-all.js"></script>')%>
