decimal 2 and location

--- a/views/pages/warehouse/snapshot/package/list-all.ejs
+++ b/views/pages/warehouse/snapshot/package/list-all.ejs
@@ -82,7 +82,7 @@
                 <td><%= pkg.location %></td>
                 <td><%= pkg.packageType %></td>
                 <td><%= pkg.weight %></td>
-                <td><%= pkg.volumetricWeight %></td>
+                <td><%= pkg.volumetricWeight.toFixed(2) %></td>
                 <td><%= pkg.express %></td>
                 <td><%= pkg.aging %></td>
                 <td><%= pkg.agingdollar %></td>
