--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -250,7 +250,7 @@
 				<!-- Snapshot -->
 				<li class="nav-item <% if (page.includes('/snapshot/')) { %> active <% } %>">
 					<a data-toggle="collapse" href="#snapshot">
-						<i class="fas fa-store"></i>
+						<i class="fas fa-table"></i>
 						<p>Snapshot</p>
 						<span class="caret"></span>
 					</a>
