--- a/views/pages/warehouse/awb/list.ejs
+++ b/views/pages/warehouse/awb/list.ejs
@@ -55,6 +55,7 @@ if(type=="nodocs"){
                     <th></th>
                   </tr>
                 </thead>
+                <%=JSON.stringify(airwaybill[0])%>
                 <tbody>
                   <% 
                   airwaybill.forEach(function(awb){
