--- a/views/pages/warehouse/snapshot/awb/list.ejs
+++ b/views/pages/warehouse/snapshot/awb/list.ejs
@@ -50,7 +50,7 @@ var endate = new Date();
           <input type="hidden" id="daterange" value="<%=daterange%>">
           <input type="hidden" id="page" value="<%=page%>">
 
-           <div class="d-flex col-xs-8 col-sm-8 float-right  py-4 pb-4">
+           <div class="col-xs-12 col-sm-12 float-right">
               <select name="search_type" id="search_type"  class="form-control" style="width: 30%; float: left;">
                   <option value="">Select </option>
                   <option value="AWBNUMBER" <%if(query.search_type=='AWBNUMBER'){%>selected<%}%>>AWB # </option>
@@ -63,7 +63,7 @@ var endate = new Date();
         <div class="tab-content m-4" id="awb-list-tabContent">
           <!-- <input type="hidden" name="clear" id="clear" value="<%=clear%>"> -->
                 <div class="tab-pane fade <%if(type =="airwaybill" || !type){%>active show<%}%>" id="awb-list" role="tabpanel" aria-labelledby="awb-list-tab">
-            <div class="table-responsive">
+            <div class="table-responsive p-4">
               <table id='awb-table' class='display table table-striped table-hover  dataTable'>
                 <thead>
                   <tr>
