--- a/views/pages/warehouse/snapshot/package/list-all.ejs
+++ b/views/pages/warehouse/snapshot/package/list-all.ejs
@@ -62,7 +62,7 @@ var endate = new Date();
         <input type="hidden" id="daterange" value="<%=daterange%>">
         <input type="hidden" id="page" value="<%=page%>">
 
-         <div class="d-flex col-xs-8 col-sm-8 float-right  py-4 pb-4">
+         <div class="col-xs-12 col-sm-12 float-right">
             <select name="search_type" id="search_type"  class="form-control" style="width: 30%; float: left;">
                 <option value="">Select </option>
                 <option value="AWBNUMBER" <%if(query.search_type=='AWBNUMBER'){%>selected<%}%>>AWB # </option>
@@ -88,7 +88,7 @@ var endate = new Date();
                 <th>Original Barcode</th>
                 <th>Description</th>
                 <th>Status</th>
-                <th>Location</th>
+                <!-- <th>Location</th> -->
                 <th>Package Type</th>
                 <th>Weight</th>
                 <th>Volumetric Weight</th>
@@ -112,14 +112,14 @@ var endate = new Date();
                 <td><%=(pkg.trackingNo)?pkg.trackingNo:''%></td>
                 <td><%= pkg.pmb %></td>
                 <td><%= pkg.customerFullName %></td>
-                <td><%= pkg.awbIdNumber %></td>
+                <td><a href="/warehouse/fll/awb/manage/<%=pkg.awbId%>/preview"><%=pkg.awbIdNumber%></a></td>
                 <td><%= pkg.shipperName %></td>
                 <td><%= pkg.storeLocation ?pkg.storeLocation : '9to5' %></td>
                 <td><%= pkg.barcode %></td>
 
                 <td><%= pkg.description %></td>
                 <td><%= pkg.lastStatusText %></td>
-                <td><%= pkg.location %></td>
+                <!-- <td><%= pkg.location %></td> -->
                 <td><%= pkg.packageType %></td>
                 <td><%= pkg.weight %></td>
                 <td><%= pkg.volumetricWeight.toFixed(2) %></td>
