--- a/views/shared/__template.ejs
+++ b/views/shared/__template.ejs
@@ -55,7 +55,7 @@
 	<!-- Global Search Modal Start -->
 	<div class="modal fade" id="global-search-data-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
 		aria-hidden="true">
-		<div class="modal-dialog" role="document">
+		<div class="modal-dialog modal-lg" role="document" style="width:1250px;">
 			<div class="modal-content">
 				<div class="modal-header">
 					<h5 class="modal-title" id="exampleModalLabel">Search Result</h5>
@@ -68,7 +68,10 @@
 						<table id="global-search-table-data" class="display table table-striped table-hover">
 							<thead>
 								<tr>
-									<th>Id</th>
+									<th>Customer Name</th>
+									<th>Original barcode</th>
+									<th>Tracking No</th>
+									<th>AWB</th>
 									<th><i class="fa fa-search" aria-hidden="true"></i></th>
 								</tr>
 							</thead>
