--- a/views/pages/warehouse/snapshot/package/list-all.ejs
+++ b/views/pages/warehouse/snapshot/package/list-all.ejs
@@ -90,6 +90,8 @@ var endate = new Date();
                 <th>Status</th>
                 <!-- <th>Location</th> -->
                 <th>Package Type</th>
+                <th>Zone</th>
+                <th>Carrier</th>
                 <th>Weight</th>
                 <th>Volumetric Weight</th>
                 <th>Express</th>
@@ -121,6 +123,8 @@ var endate = new Date();
                 <td><%= pkg.lastStatusText %></td>
                 <!-- <td><%= pkg.location %></td> -->
                 <td><%= pkg.packageType %></td>
+                <td><%=pkg.zoneName?pkg.zoneName:'' %></td>
+                <td><%=pkg.carrierName?pkg.carrierName:'' %></td>
                 <td><%= pkg.weight %></td>
                 <td><%= pkg.volumetricWeight.toFixed(2) %></td>
                 <td><%= pkg.express %></td>
