--- a/views/pages/warehouse/snapshot/awb/list.ejs
+++ b/views/pages/warehouse/snapshot/awb/list.ejs
@@ -73,6 +73,7 @@ var endate = new Date();
                     <th>Shipper</th>
                     <th>Fll Pickup</th>
                     <th>Carrier</th>
+                    <th>Invoice Count</th>
                     <th>Package Count</th>
                     <th>View more</th>
                     <th></th>
