add location packages script and location package list

--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -281,9 +281,14 @@
 									<span class="sub-item">Package List</span>
 								</a>
 							</li>
-							<li <% if (page && page.endsWith && page.endsWith('/snapshot/package/list')) { %> class="active" <% } %>>
+							<li <% if (page && page.endsWith && page.endsWith('/snapshot/package/list?customerId=load')) { %> class="active" <% } %>>
 								<a href="/warehouse/snapshot/package/list?customerId=load">
 									<span class="sub-item">Customer Package List</span>
+								</a>
+							</li>
+							<li <% if (page && page.endsWith && page.endsWith('/snapshot/package/list?locationId=load')) { %> class="active" <% } %>>
+								<a href="/warehouse/snapshot/package/list?locationId=load">
+									<span class="sub-item">Location Package List</span>
 								</a>
 							</li>
 						</ul>
