--- a/views/pages/reports/all-report.ejs
+++ b/views/pages/reports/all-report.ejs
@@ -47,4 +47,4 @@ var typeData = {ALLAWBSTATUS:"All Awb Status"}
     var daterange = "<%=query.daterange%>"
 </script>
 <% block('scripts').append('<script src="/js/utils.js"></script>')%>
-<% block('scripts').append('<script src="/js/reports/allawb.js"></script>')%></div>
+<% block('scripts').append('<script src="/js/reports/allreport.js"></script>')%></div>
